<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Ngidol48</string>
    <string name="teks_app_versi" translatable="false">versi 4.22.41</string>
    <string name="teks_tidak_dapat_tehubung_ke_server">Tidak dapat terhubung ke server, coba beberapa saat lagi. 2001</string>
    <string name="teks_terjadi_kesalahan_code">Terjadi kesalahan saat memproses data. coba beberapa saat lagi. %d</string>
    <string name="teks_terjadi_kesalahan_deskripsi">Terjadi kesalahan saat memproses data. coba beberapa saat lagi. 2004</string>
    <string name="teks_terjadi_kesalahan">Terjadi kesalahan saat memproses data. coba beberapa saat lagi. 2004</string>
    <string name="teks_gagal_masuk_dengan_google">Gagal masuk dengan google, coba beberapa saat lagi</string>
    <string name="teks_peringatan">Peringatan</string>
    <string name="teks_setlist">Setlist</string>
    <string name="teks_kalender">Kalender</string>
    <string name="teks_member">Member</string>
    <string name="teks_informasi">Informasi</string>
    <string name="teks_tidak_ada_data_member">Tidak ada data member</string>
    <string name="teks_tidak_ada_data_setlist">Tidak ada data setlist</string>
    <string name="teks_tidak_ada_data_songlist">Tidak ada data lagu</string>
    <string name="teks_tidak_ada_data_event">Tidak ada data event</string>
    <string name="teks_tidak_ada_data_berita">Tidak ada informasi</string>
    <string name="teks_tidak_ada_data_notifikasi">Tidak ada notifikasi untuk anda</string>
    <string name="teks_tidak_ada_data_blog">Tidak ada blog untuk saat ini</string>
    <string name="teks_tidak_ada_data_handshake">untuk saat ini belum ada handshake/video call  ygy</string>
    <string name="teks_tidak_ada_data_mng">untuk saat ini belum ada personal meet n greet ygy</string>
    <string name="teks_tidak_ada_data_handshake_riwayat">untuk saat ini belum ada riwayat handshake/video call  ygy</string>
    <string name="teks_tidak_ada_data_mng_riwayat">untuk saat ini belum ada riwayat personal meet n greet  ygy</string>
    <string name="teks_periksa_koneksi_coba_beberapa_saat">Periksa koneksi anda atau coba beberapa saat lagi</string>
    <string name="teks_nama_panggilan">Nama Panggilan</string>
    <string name="teks_tanggal_lahir">Tanggal Lahir</string>
    <string name="teks_golongan_darah">Golongan Darah</string>
    <string name="teks_horoskop">Horoskop</string>
    <string name="teks_tinggi_badan">Tinggi Badan</string>
    <string name="default_notification_channel_id">com.arira.ngidol48</string>
    <string name="teks_total_lagu">%s lagu</string>
    <string name="teks_tidak_tersedia">Tidak tersedia</string>
    <string name="teks_tersedia">Tersedia</string>
    <string name="teks_lagu_jkt">Lagu JKT48</string>
    <string name="teks_lagu">Lagu &amp; Album</string>
    <string name="teks_d_member">%s Member</string>
    <string name="teks_member_perform">Member Perform</string>
    <string name="teks_bday">Ulang Tahun</string>
    <string name="teks_event">Event</string>
    <string name="teks_semua">Semua Informasi</string>
    <string name="teks_lihat_semua">Lihat Semua</string>
    <string name="teks_member_ulangtahun">Member yang berulang tahun bulan ini</string>
    <string name="teks_selamat_berulang_tahun">Selamat berulang tahun</string>
    <string name="teks_tiket_dan_informasi_lebih_lanjut">Tiket dan Informasi lebih lanjut</string>
    <string name="teks_media_sosial">Media Sosial</string>
    <string name="teks_kunjungi_fanbase">Kunjungi Fanbase</string>
    <string name="teks_event_hari_ini">Event Hari ini</string>
    <string name="teks_event_kosong">Tidak ada event untuk hari ini</string>
    <string name="teks_showroom_kosong">Tidak ada showroom member untuk saat ini</string>
    <string name="teks_buka_showroom">Buka Showroom Member</string>
    <string name="teks_lirik">Lirik</string>
    <string name="teks_lirik_">Lirik : </string>
    <string name="teks_buka_youtube">Buka Youtube</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="teks_member_showroom_live">Member Live at Showroom</string>
    <string name="teks_detail_message_handshake_kosong">Tunggu informasi lebih lanjut untuk event handshake/video kedepan</string>
    <string name="teks_detail_message_mng_kosong">Tunggu informasi lebih lanjut untuk event personal meet n greet kedepan</string>
    <string name="teks_handshake_vc">Video Call</string>
    <string name="teks_riwayat_handshake_vc">Riwayat Handshake/Video Call</string>
    <string name="teks_judul_rating">Bagaimana menurutmu aplikasi Ngidol48 ?</string>
    <string name="teks_ulas_sekarang">Ulas Sekarang</string>
    <string name="teks_tidak_terimakasih">Tidak, Terimakasih</string>
    <string name="teks_ingatkan_saya_nanti">Ingatkan Saya Nanti</string>
    <string name="teks_lagu_lainnya">"Lagu lainnya : "</string>
    <string name="teks_lihat_riwayat">Lihat Riwayat</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="teks_muat_ulang">Muat Ulang</string>
    <string name="teks_cari_lagu_album_atau_setlist_jkt48">Cari lagu, album atau setlist JKT48</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="teks_gunakan_kata_kunci_lain">Gunakan kata kunci lain untuk mencari pastikan pernah dengan itu dibawahakn JKT48 ya !</string>
    <string name="teks_lagu_selanjutnya">Lagu Selanjutnya</string>
    <string name="teks_notifikasi">Notifikasi</string>
    <string name="teks_atur_penerimaan_notifikasi_anda">Atur penerimaan notifikasi anda</string>
    <string name="teks_donasi">Donasi</string>
    <string name="teks_deskripsi_donasi">Jika ingin berdonasi untuk kehidupan pengembang</string>
    <string name="teks_deskripsi_donatur">Terima kasih banyak atas donasi yang diberikan :)</string>
    <string name="teks_deskripsi_informasi">Anda akan mendapatkan notifikasi terkait dengan informasi terbaru dari JKT48 Official Team</string>
    <string name="teks_deskripsi_notifikasi_event">Anda akan mendapatkan notifikasi terkait dengan event termasuk dengan penjualan dan pemberitahuan hari H event</string>
    <string name="teks_deskripsi_notifikasi_handshake">Anda akan mendapatkan notifikasi terkait dengan jadwal handshake / video call dan penjualan tiket</string>
    <string name="teks_deskripsi_notifikasi_mng">Anda akan mendapatkan notifikasi terkait dengan jadwal personal meet and greet dan penjualan tiket</string>
    <string name="teks_deskripsi_notifikasi_showroom">Anda akan mendapatkan notifikasi ketika ada member yang sedang atau memulai live showroom</string>
    <string name="teks_deskripsi_notifikasi_streaming">Anda akan mendapatkan notifikasi ketika ada streaming khusus di aplikasi yang akan dimulai</string>
    <string name="teks_showroom">Live Showroom</string>
    <string name="teks_pengaturan">Pengaturan</string>
    <string name="teks_blog">Blog</string>
    <string name="buat">Buat</string>
    <string name="teks_masuk_ke_ngidol48">Masuk ke Ngidol48</string>
    <string name="teks_selamat_datang_di_ngidol48">Selamat datang di Ngidol48. aplikasi untuk fans JKT48 berkumpul dan mendapatkan informasi mengenai JKT48</string>
    <string name="teks_masuk_dengan_google">Masuk Dengan Google</string>
    <string name="teks_masuk">Masuk</string>
    <string name="teks_mendaftar">Mendaftar</string>
    <string name="teks_dummy_halo">Halo, Nama Pengguna</string>
    <string name="teks_ucakapan_pagi">Bagaimana pagimu ini, Semoga menyenangkan</string>
    <string name="teks_ucakapan_global">Bagaimana harimu ?, Semoga menyenangkan</string>
    <string name="teks_halo_s_nama">Halo, %s</string>
    <string name="teks_keluar">Keluar</string>
    <string name="teks_nama_anda">Nama Anda</string>
    <string name="hint_email">emai@yourdomain</string>
    <string name="teks_email">Email</string>
    <string name="teks_nomor_tlp">Nomor Telepon</string>
    <string name="hint_phone_number">+1-21435333</string>
    <string name="teks_gender">Gender</string>
    <string name="teks_">-</string>
    <string name="teks_perbarui_profil">Perbarui Profil</string>
    <string name="teks_profil">Profil</string>
    <string name="teks_ganti_avatar">Ganti Avatar</string>
    <string name="teks_pria">Pria</string>
    <string name="teks_wanita">Wanita</string>
    <string name="teks_deskripsi_keluar">Apakah anda ingin keluar dari akun Ngidol48 ?</string>
    <string name="teks_tidak">Tidak</string>
    <string name="teks_iya">Iya</string>
    <string name="teks_dummy_nama">Fiony Alveria Tantri</string>
    <string name="teks_bio">Bio</string>
    <string name="teks_bio_terkeren_anda">Bio terkeren anda</string>
    <string name="teks_perbarui">Perbarui</string>
    <string name="teks_nama_kosong">Nama anda tidak boleh kosong</string>
    <string name="teks_profil_berhasil_diperbarui">Profil anda berhasil di perbarui</string>
    <string name="teks_kebijakan_privasi">Kebijakan Privasi</string>
    <string name="teks_judul">Judul</string>
    <string name="teks_tulis_blog">Tulis blog</string>
    <string name="_0_kata">0 kata</string>
    <string name="teks_blog_tersimpan">Terimakasih sudah membuat blog. blog anda sudah tersimpan dan dipublikasikan</string>
    <string name="teks_dummy_judul_blog" />
    <string name="teks_isi">Isi</string>
    <string name="teks_tuliskan_cerita_anda">Tuliskan cerita anda</string>
    <string name="teks_kendala_dan_masukan">Lapor kendala dan masukan</string>
    <string name="teks_deskripsi_kendala_masukan">Laporakan kendala yang terjadi dan beri masukan untuk aplikasi</string>
    <string name="teks_cari_event">Cari event atau tanggal event</string>
    <string name="teks_semua_kategori">Semua Kategori</string>
    <string name="teks_pilih_aplikasi_untuk_membuka">Pilih aplikasi untuk membuka</string>
    <string name="teks_perangkat_tidak_mendukung_pip">Perangkat tidak mendukung untuk picture in picture</string>
    <string name="teks_jkt_live_idn">JKT48 on IDN Live</string>
    <string name="teks_lihat_komentar">Lihat Komentar</string>
    <string name="teks_cari_kategori">Cari Kategori</string>
    <string name="teks_mohon_tunggu">Mohon tunggu</string>
    <string name="teks_sedang_menyiapkan_data">Sedang menyiakan data ya gess</string>
    <string name="teks_kategori">Kategori</string>
    <string name="teks_tidak_ada_komentar">Tidak ada komentar</string>
    <string name="teks_jadilah_yang_pertama_untuk_mengomentarinya">Jadilah yang pertama untuk mengomentarinya</string>
    <string name="teks_tulis_komentar_anda">Tulis Komentar Anda</string>
    <string name="teks_tutup">Tutup</string>
    <string name="teks_hapus">Hapus</string>
    <string name="teks_bagikan">Bagikan</string>
    <string name="teks_detail_delete_blog">Apakah anda yakin ingin menghapus tulisan anda ini ?</string>
    <string name="teks_ya">Ya</string>
    <string name="teks_success_delete_blog">Tulisan anda telah dihapus</string>
    <string name="teks_laporkan">Laporkan</string>
    <string name="teks_judul_report_view">Ada masalah apa dengan tulisan %s</string>
    <string name="teks_pilih_salah_satu_kategori_dibawah_ini">Pilih salah satu kategori dibawah ini</string>
    <string name="teks_pilih_salah_satu_kategori">Pilih salah satu kategori terlebih dahulu</string>
    <string name="teks_publish">Publish</string>
    <string name="d_lagu">%d Lagu</string>
    <string name="d_blog">%d tulisan</string>
    <string name="teks_blog_s_user">Blog %s</string>
    <string name="teks_baca_kebijakan_aplikasi">Baca kebijakan privasi untuk aplikasi Ngidol48</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_berita">Berita</string>
    <string name="title_blog">Blog</string>
    <string name="title_member">Member</string>
    <string name="title_profil">Profil</string>
</resources>