<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.profil.ProfilActivity">
        <include layout="@layout/layout_toolbar"
            android:id="@+id/toolbar"/>
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <androidx.core.widget.NestedScrollView

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="none">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_16sdp">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_avatar"
                        app:civ_border_color="@color/pink"
                        app:civ_border_width="@dimen/_1sdp"
                        android:src="@drawable/ic_member"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_gravity="center"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"/>
                    <TextView
                        android:id="@+id/tv_ganti_ava"
                        android:padding="@dimen/_5sdp"
                        android:layout_gravity="center"
                        style="@style/body10"
                        android:text="@string/teks_ganti_avatar"/>

                    <TextView
                        android:id="@+id/tv_perbarui"
                        android:padding="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_gravity="end"
                        android:textColor="@color/colorPrimary"
                        style="@style/title10"
                        android:text="@string/teks_perbarui_profil"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            style="@style/body12"
                            android:text="@string/teks_nama_anda"/>
                        <TextView
                            android:id="@+id/tv_nama_detail"
                            style="@style/title12"
                            android:text="@string/teks_nama_anda"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            style="@style/body12"
                            android:text="@string/teks_email"/>
                        <TextView
                            android:id="@+id/tv_email"
                            style="@style/title12"
                            android:text="@string/hint_email"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            style="@style/body12"
                            android:text="@string/teks_nomor_tlp"/>
                        <TextView
                            android:id="@+id/tv_tlp"
                            style="@style/title12"
                            android:text="@string/hint_phone_number"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            style="@style/body12"
                            android:text="@string/teks_gender"/>
                        <TextView
                            android:id="@+id/tv_gender"
                            style="@style/title12"
                            android:text="@string/teks_"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lin_kebijakan_privasi"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:src="@drawable/ic_blog"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"/>
                        <TextView
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_gravity="center"
                            style="@style/body12"
                            android:text="@string/teks_kebijakan_privasi"/>
                    </LinearLayout>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        <TextView
            android:id="@+id/tv_keluar"
            android:textAlignment="center"
            android:textColor="@color/abu_pekat"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:padding="@dimen/_10sdp"
            style="@style/title12"
            android:text="@string/teks_keluar"/>
    </LinearLayout>
</layout>