<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.pengaturan.PengaturanActivity">
        <include layout="@layout/layout_toolbar"
            android:id="@+id/toolbar"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
            <LinearLayout
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/lin_notifikasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            style="@style/title12"
                            android:text="@string/teks_notifikasi"/>
                        <TextView
                            android:layout_marginTop="@dimen/_5sdp"
                            style="@style/body10"
                            android:text="@string/teks_atur_penerimaan_notifikasi_anda"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_baseline_chevron_right_24"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/_15sdp"
                    android:id="@+id/lin_saran"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            style="@style/title12"
                            android:text="@string/teks_kendala_dan_masukan"/>
                        <TextView
                            android:layout_marginTop="@dimen/_5sdp"
                            style="@style/body10"
                            android:text="@string/teks_deskripsi_kendala_masukan"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_baseline_chevron_right_24"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/_15sdp"
                    android:id="@+id/lin_donasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            style="@style/title12"
                            android:text="@string/teks_donasi"/>
                        <TextView
                            android:layout_marginTop="@dimen/_5sdp"
                            style="@style/body10"
                            android:text="@string/teks_deskripsi_donasi"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_flower"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>