<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.profil.EditProfilActivity">
        <include layout="@layout/layout_toolbar"
            android:id="@+id/toolbar"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:padding="@dimen/_16sdp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/body10"
                        android:text="@string/teks_nama_anda"
                        android:textColor="@color/dark" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:background="@drawable/background_border"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingRight="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_10sdp">

                        <EditText
                            android:id="@+id/edt_nama"
                            style="@style/editTextEntryName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@color/transparant"
                            android:gravity="center_vertical"
                            android:hint="@string/teks_dummy_nama"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/dark"
                            android:textColorHint="@color/abu1"
                            android:textSize="@dimen/_12sdp" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/body10"
                        android:text="@string/teks_bio"
                        android:textColor="@color/dark" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:background="@drawable/background_border"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_10sdp">

                        <EditText
                            android:id="@+id/edt_bio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@color/transparant"
                            android:gravity="start"
                            android:hint="@string/teks_bio_terkeren_anda"
                            android:lines="3"
                            android:maxLines="3"
                            android:textColor="@color/dark"
                            android:textColorHint="@color/abu1"
                            android:textSize="@dimen/_12sdp" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/body10"
                        android:text="@string/teks_gender"
                        android:textColor="@color/dark" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:background="@drawable/background_border"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_10sdp">

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <RadioButton
                                android:id="@+id/rb_pria"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/teks_pria"/>

                            <RadioButton
                                android:id="@+id/rb_wanita"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/teks_wanita"/>
                        </RadioGroup>
                    </RelativeLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_perbarui_"
                    android:text="@string/teks_perbarui"
                    android:layout_marginTop="@dimen/_20sdp"
                    style="@style/button_main"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>