<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:keepScreenOn="true"
        tools:context=".ui.lagu.DetailLaguActivity">

        <include layout="@layout/layout_toolbar"
            android:id="@+id/toolbar"/>

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/embed_yt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">
                <TextView
                    android:textColor="@color/colorPrimaryTeks"
                    android:id="@+id/tv_judul"
                    style="@style/title14"
                    android:text="@string/app_name"/>
                <TextView
                    android:layout_marginTop="@dimen/_3sdp"
                    android:id="@+id/tv_setlist"
                    style="@style/body10"
                    android:text="@string/app_name"/>

                <LinearLayout
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_shape_pink">
                    <TextView

                        style="@style/title10"
                        android:text="@string/teks_lirik"/>

                    <TextView
                        android:textIsSelectable="true"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:id="@+id/tv_lirik"
                        style="@style/title14"
                        android:textColor="@color/dark"
                        android:text="@string/app_name"/>
                </LinearLayout>

                <TextView
                    android:layout_marginTop="@dimen/_15sdp"
                    style="@style/title10"
                    android:text="@string/teks_lagu_lainnya"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="@dimen/_5sdp"
                    android:id="@+id/rv_lagu_lain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>